blog page finished

--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -10,6 +10,19 @@
 @import "./layout/creators";
 @import "./layout/catagories";
 @import "./layout/ntfs";
+@import "./layout/highlight";
+@import "./layout/how-it-work";
+@import "./layout/subscribe";
+@import "./layout/footer";
+@import "./layout/login-navbar";
+@import "./layout/login-create";
+
+
+
+
+
 
 
 @import "./pages/blog";
+@import "./pages/login";
+
