--- a/client/scss/layout/_catagories.scss
+++ b/client/scss/layout/_catagories.scss
@@ -44,6 +44,8 @@
             padding-top: 40px;
         }
         .catagory {
+
+          
           display: flex;
           flex-direction: column;
           align-items: center;
@@ -53,6 +55,7 @@
           position: relative;
           width: 240px;
           height: 316px;
+          text-decoration: none;
           @include for-size(tablet) {
             display: flex;
             flex-direction: column;
