--- a/client/scss/layout/_ntfs.scss
+++ b/client/scss/layout/_ntfs.scss
@@ -1,6 +1,8 @@
 .wrapper {
+  // responive not complated
   .main {
     .nft-wrapper {
+      padding: 80px 0px;
       .nft-top-text {
         display: flex;
         align-items: center;
@@ -69,7 +71,26 @@
       }
 
       .nfts {
+        display: flex;
+      
+        gap: 30px;
+        margin-top: 60px;
         .nft {
+
+          &:nth-child(1){
+
+          }
+          &:nth-child(2){
+
+
+          }
+          &:nth-child(3){
+
+            @include for-size(tablet){
+              display: none;
+            }
+          }
+
           width: 330px;
           height: 469px;
           border-radius: 20px;
@@ -88,23 +109,117 @@
             flex-direction: column;
             align-items: center;
             flex: 1 0 0;
-            span {
+            position: relative;
+            .text {
+              position: absolute;
+              color: var(--White, #fff);
+
+              /* H5 - Work Sans */
+              font-family: Work Sans;
+              font-size: 22px;
+              font-style: normal;
+              font-weight: 600;
+              line-height: 140%; /* 30.8px */
+              text-transform: capitalize;
+              top: 320px;
+              right: 130px;
             }
 
             #mdl {
               position: relative;
 
+              span {
+                color: var(--White, #fff);
+
+                /* Base (Body) - Space Mono */
+                font-family: Space Mono;
+                font-size: 16px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 140%; /* 22.4px */
+                position: absolute;
+                top: 360px;
+                right: -10px;
+              }
+
               img {
                 position: absolute;
                 width: 24px;
                 height: 24px;
-                top: 350px;
+                top: 360px;
+                right: 100px;
                 display: flex;
                 justify-content: center;
                 align-items: center;
                 border-radius: 120px;
                 background: url(<path-to-image>),
                   lightgray 50% / cover no-repeat;
+              }
+            }
+
+            #bttm {
+              display: flex;
+              gap: 100px;
+              position: absolute;
+              top: 410px;
+
+              .left {
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+
+                span {
+                  &:nth-child(1) {
+                    color: #858584;
+
+                    /* Caption - Space Mono */
+                    font-family: Space Mono;
+                    font-size: 12px;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 110%; /* 13.2px */
+                  }
+                  &:nth-child(2) {
+                    color: var(--White, #fff);
+
+                    /* Base (Body) - Space Mono */
+                    font-family: Space Mono;
+                    font-size: 16px;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 140%; /* 22.4px */
+                  }
+                }
+              }
+
+              .right {
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+
+                span {
+                  
+                  &:nth-child(1) {
+                    color: #858584;
+
+                    /* Caption - Space Mono */
+                    font-family: Space Mono;
+                    font-size: 12px;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 110%; /* 13.2px */
+                  }
+                  &:nth-child(2) {
+                    color: var(--White, #fff);
+
+                    /* Base (Body) - Space Mono */
+                    font-family: Space Mono;
+                    font-size: 16px;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 140%; /* 22.4px */
+                  }
+                }
               }
             }
           }
