--- a/client/scss/main.css
+++ b/client/scss/main.css
@@ -792,6 +792,7 @@ table {
   position: relative;
   width: 240px;
   height: 316px;
+  text-decoration: none;
 }
 @media screen and (max-width: 1050px) {
   .wrapper .main .catagories-wrapper .catagories .catagory {
@@ -920,6 +921,9 @@ table {
   }
 }
 
+.wrapper .main .nft-wrapper {
+  padding: 80px 0px;
+}
 .wrapper .main .nft-wrapper .nft-top-text {
   display: flex;
   align-items: center;
@@ -977,12 +981,22 @@ table {
   align-items: center;
   gap: 12px;
 }
+.wrapper .main .nft-wrapper .nfts {
+  display: flex;
+  gap: 30px;
+  margin-top: 60px;
+}
 .wrapper .main .nft-wrapper .nfts .nft {
   width: 330px;
   height: 469px;
   border-radius: 20px;
   background: #3b3b3b;
   position: relative;
+}
+@media screen and (max-width: 1050px) {
+  .wrapper .main .nft-wrapper .nfts .nft:nth-child(3) {
+    display: none;
+  }
 }
 .wrapper .main .nft-wrapper .nfts .nft .nft-top img {
   position: absolute;
@@ -993,20 +1007,596 @@ table {
   flex-direction: column;
   align-items: center;
   flex: 1 0 0;
+  position: relative;
+}
+.wrapper .main .nft-wrapper .nfts .nft .nft-bottom .text {
+  position: absolute;
+  color: var(--White, #fff);
+  /* H5 - Work Sans */
+  font-family: Work Sans;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 140%; /* 30.8px */
+  text-transform: capitalize;
+  top: 320px;
+  right: 130px;
 }
 .wrapper .main .nft-wrapper .nfts .nft .nft-bottom #mdl {
   position: relative;
+}
+.wrapper .main .nft-wrapper .nfts .nft .nft-bottom #mdl span {
+  color: var(--White, #fff);
+  /* Base (Body) - Space Mono */
+  font-family: Space Mono;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%; /* 22.4px */
+  position: absolute;
+  top: 360px;
+  right: -10px;
 }
 .wrapper .main .nft-wrapper .nfts .nft .nft-bottom #mdl img {
   position: absolute;
   width: 24px;
   height: 24px;
-  top: 350px;
+  top: 360px;
+  right: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 120px;
   background: url(<path-to-image>), lightgray 50%/cover no-repeat;
+}
+.wrapper .main .nft-wrapper .nfts .nft .nft-bottom #bttm {
+  display: flex;
+  gap: 100px;
+  position: absolute;
+  top: 410px;
+}
+.wrapper .main .nft-wrapper .nfts .nft .nft-bottom #bttm .left {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.wrapper .main .nft-wrapper .nfts .nft .nft-bottom #bttm .left span:nth-child(1) {
+  color: #858584;
+  /* Caption - Space Mono */
+  font-family: Space Mono;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 110%; /* 13.2px */
+}
+.wrapper .main .nft-wrapper .nfts .nft .nft-bottom #bttm .left span:nth-child(2) {
+  color: var(--White, #fff);
+  /* Base (Body) - Space Mono */
+  font-family: Space Mono;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%; /* 22.4px */
+}
+.wrapper .main .nft-wrapper .nfts .nft .nft-bottom #bttm .right {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.wrapper .main .nft-wrapper .nfts .nft .nft-bottom #bttm .right span:nth-child(1) {
+  color: #858584;
+  /* Caption - Space Mono */
+  font-family: Space Mono;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 110%; /* 13.2px */
+}
+.wrapper .main .nft-wrapper .nfts .nft .nft-bottom #bttm .right span:nth-child(2) {
+  color: var(--White, #fff);
+  /* Base (Body) - Space Mono */
+  font-family: Space Mono;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%; /* 22.4px */
+}
+
+.wrapper .main .highlight-wrapper img {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+  background: url(<path-to-image>), lightgray 50%/cover no-repeat;
+}
+
+.wrapper .main .how-it-work-wrapper {
+  padding: 30px 0px 80px 0px;
+}
+.wrapper .main .how-it-work-wrapper .text-area {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-bottom: 48px;
+  margin-top: 38px;
+}
+.wrapper .main .how-it-work-wrapper .text-area span:nth-child(1) {
+  color: var(--White, #fff);
+  /* H3 - Work Sans */
+  font-family: Work Sans;
+  font-size: 38px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 120%; /* 45.6px */
+  text-transform: capitalize;
+}
+@media screen and (max-width: 1050px) {
+  .wrapper .main .how-it-work-wrapper .text-area span:nth-child(1) {
+    color: var(--White, #fff);
+    /* H4 - Work Sans */
+    font-family: Work Sans;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 140%; /* 39.2px */
+    text-transform: capitalize;
+  }
+}
+@media screen and (max-width: 690px) {
+  .wrapper .main .how-it-work-wrapper .text-area span:nth-child(1) {
+    color: var(--White, #fff);
+    /* H4 - Work Sans */
+    font-family: Work Sans;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 140%; /* 39.2px */
+    text-transform: capitalize;
+  }
+}
+.wrapper .main .how-it-work-wrapper .text-area span:nth-child(2) {
+  color: var(--White, #fff);
+  /* Body Text- Work Sans */
+  font-family: Work Sans;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 160%; /* 35.2px */
+  text-transform: capitalize;
+}
+@media screen and (max-width: 1050px) {
+  .wrapper .main .how-it-work-wrapper .text-area span:nth-child(2) {
+    color: var(--White, #fff);
+    /* Base(Body) - Work Sans */
+    font-family: Work Sans;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 140%; /* 22.4px */
+  }
+}
+@media screen and (max-width: 690px) {
+  .wrapper .main .how-it-work-wrapper .text-area span:nth-child(2) {
+    color: var(--White, #fff);
+    /* Base(Body) - Work Sans */
+    font-family: Work Sans;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 140%; /* 22.4px */
+  }
+}
+.wrapper .main .how-it-work-wrapper .works {
+  display: flex;
+  gap: 30px;
+}
+@media screen and (max-width: 690px) {
+  .wrapper .main .how-it-work-wrapper .works {
+    display: flex;
+    flex-direction: column;
+  }
+}
+.wrapper .main .how-it-work-wrapper .works .work {
+  display: flex;
+  flex-direction: column;
+  width: 330px;
+  padding: 10px 30px 30px 30px;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  border-radius: 20px;
+  background: var(--Background---Secondary, #3b3b3b);
+}
+@media screen and (max-width: 1050px) {
+  .wrapper .main .how-it-work-wrapper .works .work {
+    display: flex;
+    padding: 10px 20px 30px 20px;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    flex: 1 0 0;
+    align-self: stretch;
+  }
+}
+@media screen and (max-width: 690px) {
+  .wrapper .main .how-it-work-wrapper .works .work {
+    display: flex;
+    padding: 40px 195px;
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+    align-self: stretch;
+  }
+}
+.wrapper .main .how-it-work-wrapper .works .work span:nth-child(2) {
+  color: #fff;
+  text-align: center;
+  /* H5 - Work Sans */
+  font-family: Work Sans;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 140%; /* 30.8px */
+  text-transform: capitalize;
+}
+.wrapper .main .how-it-work-wrapper .works .work span:nth-child(3) {
+  color: var(--White, #fff);
+  text-align: center;
+  /* Base(Body) - Work Sans */
+  font-family: Work Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%; /* 22.4px */
+}
+.wrapper .main .subscribe-wrapper {
+  border-radius: 20px;
+  background: #3b3b3b;
+  width: 1050px;
+  padding: 60px;
+  align-items: center;
+}
+.wrapper .main .subscribe-wrapper .subscribe-area {
+  display: flex;
+  justify-content: space-between;
+}
+.wrapper .main .subscribe-wrapper .subscribe-area .left {
+  height: 310px;
+  flex: 1 0 0;
+  width: 310px;
+}
+.wrapper .main .subscribe-wrapper .subscribe-area .right {
+  display: flex;
+  width: 425px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 40px;
+}
+.wrapper .main .subscribe-wrapper .subscribe-area .right span:nth-child(1) {
+  color: var(--White, #fff);
+  /* H3 - Work Sans */
+  font-family: Work Sans;
+  font-size: 38px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 120%; /* 45.6px */
+  text-transform: capitalize;
+}
+.wrapper .main .subscribe-wrapper .subscribe-area .right span:nth-child(2) {
+  color: var(--White, #fff);
+  /* Body Text- Work Sans */
+  font-family: Work Sans;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 160%; /* 35.2px */
+  text-transform: capitalize;
+}
+.wrapper .main .subscribe-wrapper .subscribe-area .right .email-area {
+  display: flex;
+  height: 60px;
+  align-items: center;
+  gap: 12px;
+  justify-content: end;
+}
+.wrapper .main .subscribe-wrapper .subscribe-area .right .email-area input {
+  position: relative;
+  display: flex;
+  height: 60px;
+  padding: 16px 0px 16px 20px;
+  align-items: center;
+  gap: 12px;
+  border-radius: 20px;
+  background: var(--Text, #fff);
+  border: none;
+  width: 405px;
+}
+.wrapper .main .subscribe-wrapper .subscribe-area .right .email-area input::-moz-placeholder {
+  color: var(--Background, #2b2b2b);
+  /* Base(Body) - Work Sans */
+  font-family: Work Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%; /* 22.4px */
+}
+.wrapper .main .subscribe-wrapper .subscribe-area .right .email-area input::placeholder {
+  color: var(--Background, #2b2b2b);
+  /* Base(Body) - Work Sans */
+  font-family: Work Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%; /* 22.4px */
+}
+.wrapper .main .subscribe-wrapper .subscribe-area .right .email-area button {
+  position: absolute;
+  display: flex;
+  height: 60px;
+  padding: 0px 50px;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 12px;
+  border-radius: 20px;
+  background: var(--Call-to-Action, #a259ff);
+  border: none;
+  color: #fff;
+  text-align: center;
+  font-family: Work Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 140%; /* 22.4px */
+}
+
+.wrapper .main footer {
+  padding: 40px 300px;
+  gap: 60px;
+  align-self: stretch;
+  background: var(--Background---Secondary, #3b3b3b);
+  margin-top: 80px;
+}
+@media screen and (max-width: 1050px) {
+  .wrapper .main footer {
+    display: flex;
+    flex-direction: column;
+  }
+}
+.wrapper .main footer .top {
+  display: flex;
+  gap: 70px;
+  margin-bottom: 30px;
+}
+.wrapper .main footer .top .left {
+  display: flex;
+  width: 327.414px;
+  padding-right: 0px;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.wrapper .main footer .top .left .contacts a {
+  text-decoration: none;
+}
+.wrapper .main footer .top .left .left-top a {
+  display: flex;
+  gap: 17px;
+  margin-bottom: 30px;
+}
+.wrapper .main footer .top .left span:nth-child(2) {
+  color: #ccc;
+  /* Base(Body) - Work Sans */
+  font-family: Work Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%; /* 22.4px */
+  margin-bottom: 20px;
+}
+.wrapper .main footer .top .left span:nth-child(3) {
+  color: #ccc;
+  /* Base(Body) - Work Sans */
+  font-family: Work Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%; /* 22.4px */
+  margin-bottom: 15px;
+}
+.wrapper .main footer .top .middle {
+  display: flex;
+  width: 240px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 25px;
+}
+.wrapper .main footer .top .middle span:nth-child(1) {
+  color: #fff;
+  /* H5 - Space Mono */
+  font-family: Space Mono;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 160%; /* 35.2px */
+  text-transform: capitalize;
+}
+.wrapper .main footer .top .middle span:nth-child(2) {
+  color: #ccc;
+  /* Base(Body) - Work Sans */
+  font-family: Work Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%; /* 22.4px */
+}
+.wrapper .main footer .top .middle span:nth-child(3) {
+  color: #ccc;
+  /* Base(Body) - Work Sans */
+  font-family: Work Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%; /* 22.4px */
+}
+.wrapper .main footer .top .middle span:nth-child(4) {
+  color: #ccc;
+  /* Base(Body) - Work Sans */
+  font-family: Work Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%; /* 22.4px */
+}
+.wrapper .main footer .top .right {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 25px;
+}
+.wrapper .main footer .top .right span:nth-child(1) {
+  color: #fff;
+  /* H5 - Space Mono */
+  font-family: Space Mono;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 160%; /* 35.2px */
+  text-transform: capitalize;
+}
+.wrapper .main footer .top .right span:nth-child(2) {
+  color: #ccc;
+  /* Base(Body) - Work Sans */
+  font-family: Work Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%; /* 22.4px */
+}
+.wrapper .main footer .top .right .email-area {
+  display: flex;
+  height: 60px;
+  align-items: center;
+  gap: 12px;
+  justify-content: end;
+}
+.wrapper .main footer .top .right .email-area input {
+  position: relative;
+  display: flex;
+  height: 60px;
+  padding: 16px 0px 16px 20px;
+  align-items: center;
+  gap: 12px;
+  border-radius: 20px;
+  background: var(--Text, #fff);
+  border: none;
+  width: 405px;
+}
+.wrapper .main footer .top .right .email-area input::-moz-placeholder {
+  color: var(--Background, #2b2b2b);
+  /* Base(Body) - Work Sans */
+  font-family: Work Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%; /* 22.4px */
+}
+.wrapper .main footer .top .right .email-area input::placeholder {
+  color: var(--Background, #2b2b2b);
+  /* Base(Body) - Work Sans */
+  font-family: Work Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%; /* 22.4px */
+}
+.wrapper .main footer .top .right .email-area button {
+  position: absolute;
+  display: flex;
+  height: 60px;
+  padding: 0px 50px;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 12px;
+  border-radius: 20px;
+  background: var(--Call-to-Action, #a259ff);
+  border: none;
+  color: #fff;
+  text-align: center;
+  font-family: Work Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 140%; /* 22.4px */
+}
+.wrapper .main footer .bottom div {
+  width: 100%;
+  height: 1px;
+  background: #858584;
+  margin-bottom: 20px;
+}
+.wrapper .main footer .bottom span {
+  color: #ccc;
+  /* Caption - Work Sans */
+  font-family: Work Sans;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 110%; /* 13.2px */
+}
+.navbar-wrapper .navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 50px;
+}
+.navbar-wrapper .navbar .left {
+  display: flex;
+  padding: 20px 50px;
+  justify-content: space-between;
+  align-items: center;
+  align-self: stretch;
+}
+.navbar-wrapper .navbar .right {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  height: 60px;
+  padding: 0px 30px;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+}
+.navbar-wrapper .navbar .right a {
+  color: #fff;
+  text-align: center;
+  font-family: Work Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 140%; /* 22.4px */
+  text-decoration: none;
+  display: flex;
+  height: 46px;
+  padding: 0px 20px;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+}
+.navbar-wrapper .navbar .right button {
+  display: flex;
+  height: 60px;
+  padding: 0px 30px;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+  border-radius: 20px;
+  background: var(--Call-to-Action, #a259ff);
+  border: none;
+}
+
+.login-wrapper .login {
+  display: flex;
+  align-items: center;
+  gap: 60px;
 }
 
 body {
