--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -16,13 +16,13 @@
 @import "./layout/footer";
 @import "./layout/login-navbar";
 @import "./layout/login-create";
-
-
-
-
-
+@import "./layout/login-footer";
 
 
 @import "./pages/blog";
 @import "./pages/login";
-
+@import "./pages/artist";
+@import "./pages/nft";
+@import "./pages/marketplace";
+@import "./pages/creators";
+@import "./pages/wallet"
