--- a/client/scss/layout/_footer.scss
+++ b/client/scss/layout/_footer.scss
@@ -9,16 +9,13 @@
       align-self: stretch;
       background: var(--Background---Secondary, #3b3b3b);
       margin-top: 80px;
-      
-      
-      @include for-size(tablet){
+
+      @include for-size(tablet) {
         display: flex;
         flex-direction: column;
       }
 
-      @include for-size(mobile){
-
-
+      @include for-size(mobile) {
       }
 
       .top {
@@ -26,13 +23,10 @@
         gap: 70px;
         margin-bottom: 30px;
         // flex-direction: column;
-        @include for-size(tablet){
-
+        @include for-size(tablet) {
         }
-  
-        @include for-size(mobile){
-  
-          
+
+        @include for-size(mobile) {
         }
 
         .left {
@@ -41,64 +35,48 @@
           padding-right: 0px;
           flex-direction: column;
           align-items: flex-start;
-          @include for-size(tablet){
-
+          @include for-size(tablet) {
           }
-    
-          @include for-size(mobile){
-    
-            
+
+          @include for-size(mobile) {
           }
           //   gap: 30px;
 
-            .contacts{
-              @include for-size(tablet){
+          .contacts {
+            @include for-size(tablet) {
+            }
 
+            @include for-size(mobile) {
+            }
+
+            a {
+              text-decoration: none;
+              @include for-size(tablet) {
               }
-        
-              @include for-size(mobile){
-        
-                
+
+              @include for-size(mobile) {
               }
-
-                a{
-                    text-decoration: none;
-                    @include for-size(tablet){
-
-                    }
-              
-                    @include for-size(mobile){
-              
-                      
-                    }
-                }
-            }        
+            }
+          }
 
           .left-top {
             a {
               display: flex;
               gap: 17px;
               margin-bottom: 30px;
-              @include for-size(tablet){
-
+              @include for-size(tablet) {
               }
-        
-              @include for-size(mobile){
-        
-                
+
+              @include for-size(mobile) {
               }
             }
-            
           }
 
           span {
-            @include for-size(tablet){
-
+            @include for-size(tablet) {
             }
-      
-            @include for-size(mobile){
-      
-              
+
+            @include for-size(mobile) {
             }
             &:nth-child(2) {
               color: #ccc;
@@ -109,13 +87,11 @@
               font-style: normal;
               font-weight: 400;
               line-height: 140%; /* 22.4px */
-              margin-bottom: 20px;  @include for-size(tablet){
-
+              margin-bottom: 20px;
+              @include for-size(tablet) {
               }
-        
-              @include for-size(mobile){
-        
-                
+
+              @include for-size(mobile) {
               }
             }
 
@@ -130,13 +106,10 @@
               line-height: 140%; /* 22.4px */
               margin-bottom: 15px;
 
-              @include for-size(tablet){
-
+              @include for-size(tablet) {
               }
-        
-              @include for-size(mobile){
-        
-                
+
+              @include for-size(mobile) {
               }
             }
           }
@@ -149,13 +122,10 @@
           align-items: flex-start;
           gap: 25px;
 
-          @include for-size(tablet){
-
+          @include for-size(tablet) {
           }
-    
-          @include for-size(mobile){
-    
-            
+
+          @include for-size(mobile) {
           }
 
           span {
@@ -170,13 +140,10 @@
               line-height: 160%; /* 35.2px */
               text-transform: capitalize;
 
-              @include for-size(tablet){
-
+              @include for-size(tablet) {
               }
-        
-              @include for-size(mobile){
-        
-                
+
+              @include for-size(mobile) {
               }
             }
             &:nth-child(2) {
@@ -189,13 +156,10 @@
               font-weight: 400;
               line-height: 140%; /* 22.4px */
 
-              @include for-size(tablet){
-
+              @include for-size(tablet) {
               }
-        
-              @include for-size(mobile){
-        
-                
+
+              @include for-size(mobile) {
               }
             }
             &:nth-child(3) {
@@ -208,13 +172,10 @@
               font-weight: 400;
               line-height: 140%; /* 22.4px */
 
-              @include for-size(tablet){
-
+              @include for-size(tablet) {
               }
-        
-              @include for-size(mobile){
-        
-                
+
+              @include for-size(mobile) {
               }
             }
             &:nth-child(4) {
@@ -227,13 +188,10 @@
               font-weight: 400;
               line-height: 140%; /* 22.4px */
 
-              @include for-size(tablet){
-
+              @include for-size(tablet) {
               }
-        
-              @include for-size(mobile){
-        
-                
+
+              @include for-size(mobile) {
               }
             }
           }
@@ -245,13 +203,10 @@
           align-items: flex-start;
           gap: 25px;
 
-          @include for-size(tablet){
-
+          @include for-size(tablet) {
           }
-    
-          @include for-size(mobile){
-    
-            
+
+          @include for-size(mobile) {
           }
 
           span {
@@ -266,13 +221,10 @@
               line-height: 160%; /* 35.2px */
               text-transform: capitalize;
 
-              @include for-size(tablet){
-
+              @include for-size(tablet) {
               }
-        
-              @include for-size(mobile){
-        
-                
+
+              @include for-size(mobile) {
               }
             }
             &:nth-child(2) {
@@ -285,13 +237,10 @@
               font-weight: 400;
               line-height: 140%; /* 22.4px */
 
-              @include for-size(tablet){
-
+              @include for-size(tablet) {
               }
-        
-              @include for-size(mobile){
-        
-                
+
+              @include for-size(mobile) {
               }
             }
           }
@@ -305,13 +254,10 @@
             justify-content: end;
             //   align-self: stretch;
 
-            @include for-size(tablet){
-
+            @include for-size(tablet) {
             }
-      
-            @include for-size(mobile){
-      
-              
+
+            @include for-size(mobile) {
             }
             input {
               position: relative;
@@ -324,13 +270,10 @@
               background: var(--Text, #fff);
               border: none;
               width: 405px;
-              @include for-size(tablet){
-
+              @include for-size(tablet) {
               }
-        
-              @include for-size(mobile){
-        
-                
+
+              @include for-size(mobile) {
               }
 
               // align-self: stretch;
@@ -343,13 +286,10 @@
                 font-style: normal;
                 font-weight: 400;
                 line-height: 140%; /* 22.4px */
-                @include for-size(tablet){
-
+                @include for-size(tablet) {
                 }
-          
-                @include for-size(mobile){
-          
-                  
+
+                @include for-size(mobile) {
                 }
               }
             }
@@ -373,13 +313,10 @@
               font-style: normal;
               font-weight: 600;
               line-height: 140%; /* 22.4px */
-              @include for-size(tablet){
-
+              @include for-size(tablet) {
               }
-        
-              @include for-size(mobile){
-        
-                
+
+              @include for-size(mobile) {
               }
             }
           }
@@ -392,13 +329,10 @@
           height: 1px;
           background: #858584;
           margin-bottom: 20px;
-          @include for-size(tablet){
-
+          @include for-size(tablet) {
           }
-    
-          @include for-size(mobile){
-    
-            
+
+          @include for-size(mobile) {
           }
         }
 
@@ -411,13 +345,10 @@
           font-style: normal;
           font-weight: 400;
           line-height: 110%; /* 13.2px */
-          @include for-size(tablet){
-
+          @include for-size(tablet) {
           }
-    
-          @include for-size(mobile){
-    
-            
+
+          @include for-size(mobile) {
           }
         }
       }
