--- a/client/scss/layout/_login-navbar.scss
+++ b/client/scss/layout/_login-navbar.scss
@@ -4,27 +4,60 @@
     align-items: center;
     justify-content: space-between;
     padding: 20px 50px;
-
-    .left {
+    // background-color: rebeccapurple;
+    @include for-size(tablet) {
       display: flex;
-      padding: 20px 50px;
+      padding: 15px 50px;
       justify-content: space-between;
       align-items: center;
       align-self: stretch;
+    }
+
+    @include for-size(mobile) {
+    }
+
+    .left {
+      transition: 0.6s;
+      &:hover {
+        opacity: 0.2;
+      }
+      display: flex;
+      // padding: 20px 50px;
+      justify-content: space-between;
+      align-items: center;
+      align-self: stretch;
+      @include for-size(tablet) {
+      }
+
+      @include for-size(mobile) {
+      }
     }
 
     .right {
       display: flex;
       justify-content: flex-end;
       align-items: center;
-    //   gap: 10px;
-    //   display: flex;
+      //   gap: 10px;
+      //   display: flex;
       height: 60px;
-      padding: 0px 30px;
+      // padding: 0px 30px;
       justify-content: center;
       align-items: center;
       gap: 12px;
+      @include for-size(tablet) {
+      }
+
+      @include for-size(mobile) {
+      }
       a {
+
+        &:nth-child(4){
+          display: none;
+        }
+        transition: 0.6s;
+        &:hover {
+          opacity: 0.2;
+        }
         color: #fff;
         text-align: center;
         font-family: Work Sans;
@@ -39,18 +72,46 @@
         justify-content: center;
         align-items: center;
         gap: 12px;
+        @include for-size(tablet) {
+          display: none;
+        }
+
+        @include for-size(mobile) {
+          display: none;
+        }
       }
 
       button {
-        display: flex;
-        height: 60px;
-        padding: 0px 30px;
-        justify-content: center;
-        align-items: center;
-        gap: 12px;
-        border-radius: 20px;
-        background: var(--Call-to-Action, #a259ff);
-        border: none;
+        &:nth-child(5) {
+          display: flex;
+          height: 60px;
+          padding: 0px 30px;
+          justify-content: center;
+          align-items: center;
+          gap: 12px;
+          border-radius: 20px;
+          background: var(--Call-to-Action, #a259ff);
+          border: none;
+          @include for-size(tablet) {
+            display: none;
+          }
+
+          @include for-size(mobile) {
+            display: none;
+          }
+        }
+        &:nth-child(6) {
+          background-color: transparent;
+          border: none;
+          display: none;
+          @include for-size(tablet) {
+            display: initial;
+          }
+
+          @include for-size(mobile) {
+            display: initial;
+          }
+        }
       }
     }
   }
